samples/_failures_safe/1761340485_ae704b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15a13738.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_15a13738.c:136:13: error: expected ‘;’ at end of input
  136 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_15a13738.c:136:5: error: expected declaration or statement at end of input
  136 |     return 1
      |     ^~~~~~
